[ISSUE-553] Update crds operator (#79)
* * build controller-gen from go.mod
* make targets for manifest generation

Signed-off-by: romank <roman_kiselenko@dell.com>

* * add spec field validations

Signed-off-by: romank <roman_kiselenko@dell.com>

* * allow null
* set default values

Signed-off-by: romank <roman_kiselenko@dell.com>

* * move crds generation to csi-baremetal repo

Signed-off-by: romank <roman_kiselenko@dell.com>

* * get version back

Signed-off-by: romank <roman_kiselenko@dell.com>

* * generate operator crds

Signed-off-by: romank <roman_kiselenko@dell.com>

--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -1,9 +1,10 @@
+
 ---
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.2
+    controller-gen.kubebuilder.io/version: v0.5.0
   creationTimestamp: null
   name: deployments.csi-baremetal.dell.com
 spec:
@@ -13,15 +14,324 @@ spec:
     listKind: DeploymentList
     plural: deployments
     shortNames:
-      - bmcsi
-      - bmcsis
+    - bmcsi
+    - bmcsis
     singular: deployment
   scope: Namespaced
-  version: v1
   versions:
-    - name: v1
-      served: true
-      storage: true
+  - name: v1
+    schema:
+      openAPIV3Schema:
+        description: Deployment is the Schema for the deployments API
+        properties:
+          apiVersion:
+            description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            type: string
+          kind:
+            description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            type: string
+          metadata:
+            type: object
+          spec:
+            description: DeploymentSpec represent all CSI components need to be deployed by operator
+            properties:
+              driver:
+                description: Driver represent CSI driver with all necessary CSI components
+                properties:
+                  controller:
+                    description: Controller encapsulates logic for CSI controller component
+                    properties:
+                      image:
+                        description: Image contain information for components docker images
+                        properties:
+                          name:
+                            type: string
+                          tag:
+                            type: string
+                        required:
+                        - name
+                        - tag
+                        type: object
+                      log:
+                        description: Log is a configuration for logger in components
+                        properties:
+                          format:
+                            description: Format is format in which log will appear
+                            type: string
+                          level:
+                            description: Level indicates which types if logging need to be show
+                            type: string
+                        required:
+                        - format
+                        - level
+                        type: object
+                      sidecars:
+                        additionalProperties:
+                          description: Sidecar represent CSI sidecar containers
+                          properties:
+                            image:
+                              description: Image contain information for components docker images
+                              properties:
+                                name:
+                                  type: string
+                                tag:
+                                  type: string
+                              required:
+                              - name
+                              - tag
+                              type: object
+                          type: object
+                        type: object
+                    type: object
+                  logReceiver:
+                    description: LogReceiver encapsulates information needed to establish log receiver for components
+                    properties:
+                      image:
+                        description: Image contain information for components docker images
+                        properties:
+                          name:
+                            type: string
+                          tag:
+                            type: string
+                        required:
+                        - name
+                        - tag
+                        type: object
+                      name:
+                        type: string
+                    required:
+                    - name
+                    type: object
+                  metrics:
+                    description: Metrics encapsulates necessary information to expose metric for different components
+                    properties:
+                      path:
+                        type: string
+                      port:
+                        format: int64
+                        type: integer
+                    required:
+                    - path
+                    - port
+                    type: object
+                  mountRootHost:
+                    description: TODO need to implement this
+                    type: boolean
+                  node:
+                    description: Node encapsulates information for CSI node components
+                    properties:
+                      driveMgr:
+                        description: DriveMgr represents drive manager node component
+                        properties:
+                          endpoint:
+                            type: string
+                          image:
+                            description: Image contain information for components docker images
+                            properties:
+                              name:
+                                type: string
+                              tag:
+                                type: string
+                            required:
+                            - name
+                            - tag
+                            type: object
+                        required:
+                        - endpoint
+                        type: object
+                      image:
+                        description: Image contain information for components docker images
+                        properties:
+                          name:
+                            type: string
+                          tag:
+                            type: string
+                        required:
+                        - name
+                        - tag
+                        type: object
+                      log:
+                        description: Log is a configuration for logger in components
+                        properties:
+                          format:
+                            description: Format is format in which log will appear
+                            type: string
+                          level:
+                            description: Level indicates which types if logging need to be show
+                            type: string
+                        required:
+                        - format
+                        - level
+                        type: object
+                      sidecars:
+                        additionalProperties:
+                          description: Sidecar represent CSI sidecar containers
+                          properties:
+                            image:
+                              description: Image contain information for components docker images
+                              properties:
+                                name:
+                                  type: string
+                                tag:
+                                  type: string
+                              required:
+                              - name
+                              - tag
+                              type: object
+                          type: object
+                        type: object
+                    type: object
+                type: object
+              globalRegistry:
+                nullable: true
+                type: string
+              nodeController:
+                description: NodeController represent operator for CSI bare-metal nodes
+                properties:
+                  enable:
+                    type: boolean
+                  image:
+                    description: Image contain information for components docker images
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    required:
+                    - name
+                    - tag
+                    type: object
+                  log:
+                    description: Log is a configuration for logger in components
+                    properties:
+                      format:
+                        description: Format is format in which log will appear
+                        type: string
+                      level:
+                        description: Level indicates which types if logging need to be show
+                        type: string
+                    required:
+                    - format
+                    - level
+                    type: object
+                required:
+                - enable
+                type: object
+              nodeIDAnnotation:
+                type: boolean
+              nodeSelector:
+                description: NodeSelector contains key-value pair to deploy node components on specific k8sNodes
+                properties:
+                  key:
+                    type: string
+                  value:
+                    type: string
+                type: object
+              platform:
+                default: vanilla
+                enum:
+                - rke
+                - openshift
+                - vanilla
+                type: string
+              pullPolicy:
+                default: IfNotPresent
+                enum:
+                - IfNotPresent
+                - Always
+                - Never
+                type: string
+              registrySecret:
+                nullable: true
+                type: string
+              scheduler:
+                description: Scheduler encapsulates information to deploy CSI scheduler
+                properties:
+                  enable:
+                    type: boolean
+                  extenderPort:
+                    type: string
+                  image:
+                    description: Image contain information for components docker images
+                    properties:
+                      name:
+                        type: string
+                      tag:
+                        type: string
+                    required:
+                    - name
+                    - tag
+                    type: object
+                  log:
+                    description: Log is a configuration for logger in components
+                    properties:
+                      format:
+                        description: Format is format in which log will appear
+                        type: string
+                      level:
+                        description: Level indicates which types if logging need to be show
+                        type: string
+                    required:
+                    - format
+                    - level
+                    type: object
+                  metrics:
+                    description: Metrics encapsulates necessary information to expose metric for different components
+                    properties:
+                      path:
+                        type: string
+                      port:
+                        format: int64
+                        type: integer
+                    required:
+                    - path
+                    - port
+                    type: object
+                  patcher:
+                    description: Patcher represents scheduler patcher container, which tries to patch Kubernetes scheduler
+                    properties:
+                      configMapName:
+                        type: string
+                      enable:
+                        type: boolean
+                      image:
+                        description: Image contain information for components docker images
+                        properties:
+                          name:
+                            type: string
+                          tag:
+                            type: string
+                        required:
+                        - name
+                        - tag
+                        type: object
+                      interval:
+                        type: integer
+                      readinessTimeout:
+                        type: integer
+                      restoreOnShutdown:
+                        type: boolean
+                    required:
+                    - enable
+                    type: object
+                  storageProvisioner:
+                    type: string
+                required:
+                - enable
+                - storageProvisioner
+                type: object
+              sequentialLVGReservation:
+                type: boolean
+            required:
+            - platform
+            - pullPolicy
+            type: object
+          status:
+            description: DeploymentStatus defines the observed state of Deployment
+            type: object
+        type: object
+    served: true
+    storage: true
 status:
   acceptedNames:
     kind: ""
