add resources to all containers
Signed-off-by: Anton Yurkov <anton.yurkov@dell.com>

--- a/charts/csi-baremetal-deployment/values.yaml
+++ b/charts/csi-baremetal-deployment/values.yaml
@@ -39,26 +39,25 @@ driver:
       tag:
 
     resources:
-      requests:
-        memory: 200Mi
-        cpu: 100m
       limits:
-        memory: 200Mi
-        cpu: 100m
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
 
   node:
     image:
       tag:
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   drivemgr:
     type: basemgr
     image:
@@ -70,13 +69,13 @@ driver:
     amountOfLoopDevices: 3
     sizeOfLoopDevices: 101Mi
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
 
   # Sidecars parameters
   provisioner:
@@ -84,50 +83,50 @@ driver:
       # if you want to use topology feature (multiple PVCs per pod) you should use v1.2.2
       tag: v1.6.0
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   resizer:
     image:
       tag: v1.1.0
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   nodeDriverRegistrar:
     image:
       tag: v1.3.0
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   livenessProbe:
     image:
       tag: v2.1.0
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
   # Metrics endpoint
   metrics:
     path: /metrics
@@ -167,13 +166,13 @@ scheduler:
   image:
     tag:
 
-#  resources:
-#    requests:
-#      memory:
-#      cpu:
-#    limits:
-#      memory:
-#      cpu:
+  resources:
+    limits:
+      cpu:
+      memory:
+    requests:
+      cpu:
+      memory:
 
   # Logging settings
   log:
@@ -198,14 +197,14 @@ scheduler:
     image:
       tag:
 
-#    resources:
-#      requests:
-#        memory:
-#        cpu:
-#      limits:
-#        memory:
-#        cpu:
-#
+    resources:
+      limits:
+        cpu:
+        memory:
+      requests:
+        cpu:
+        memory:
+
     kubeconfig: /etc/kubernetes/scheduler.conf
     interval: 60
     restore_on_shutdown: true
@@ -226,13 +225,13 @@ nodeController:
   image:
     tag:
 
-#  resources:
-#    requests:
-#      memory:
-#      cpu:
-#    limits:
-#      memory:
-#      cpu:
+  resources:
+    limits:
+      cpu:
+      memory:
+    requests:
+      cpu:
+      memory:
 
   # Logging settings
   log:
